[gd_scene format=3 uid="uid://cwssj1gs8vnkf"]

[ext_resource type="Script" uid="uid://vnscjc8g8y86" path="res://start_menu.gd" id="1_d3352"]

[sub_resource type="Gradient" id="Gradient_yoqr7"]
colors = PackedColorArray(0.85882354, 0, 0, 1, 4.7168137e-06, 0.82922804, 0.36592188, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_d3352"]
gradient = SubResource("Gradient_yoqr7")
width = 32
height = 32

[sub_resource type="LabelSettings" id="LabelSettings_ufv5y"]
font_size = 12

[sub_resource type="Animation" id="Animation_yoqr7"]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.06666667, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0d5ky"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Start:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LevelSelect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(320, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7htnq"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Start:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-320, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LevelSelect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(320, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3wf2c"]
_data = {
&"Fade": SubResource("Animation_yoqr7"),
&"RESET": SubResource("Animation_0d5ky"),
&"new_animation": SubResource("Animation_7htnq")
}

[node name="StartMenu" type="Control" unique_id=993229490]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d3352")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1671644571]
layout_mode = 0
offset_right = 320.0
offset_bottom = 192.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="Start" type="Control" parent="." unique_id=1295022790]
anchors_preset = 0
offset_right = 320.0
offset_bottom = 184.0

[node name="Label" type="Label" parent="Start" unique_id=1677059282]
layout_mode = 0
offset_top = 16.0
offset_right = 320.0
offset_bottom = 80.0
text = "Gam gam"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Start" unique_id=1288877723]
layout_mode = 1
anchors_preset = -1
offset_left = 113.0
offset_top = 88.0
offset_right = 217.0
offset_bottom = 112.0

[node name="Label" type="Label" parent="Start/Button" unique_id=1005636371]
layout_mode = 0
offset_right = 107.0
offset_bottom = 23.0
text = "Start Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelSelect" type="Control" parent="." unique_id=1991190342]
anchors_preset = 0
offset_left = 320.0
offset_right = 639.99994
offset_bottom = 184.0

[node name="TextureButton" type="TextureButton" parent="LevelSelect" unique_id=997361987]
layout_mode = 0
offset_left = 64.0
offset_top = 80.0
offset_right = 96.0
offset_bottom = 112.0
texture_normal = SubResource("GradientTexture2D_d3352")

[node name="Label" type="Label" parent="LevelSelect/TextureButton" unique_id=885274872]
layout_mode = 0
offset_left = -16.0
offset_top = 32.0
offset_right = 46.0
offset_bottom = 55.0
text = "Grass land"
label_settings = SubResource("LabelSettings_ufv5y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton2" type="TextureButton" parent="LevelSelect" unique_id=1347530875]
layout_mode = 0
offset_left = 144.0
offset_top = 80.0
offset_right = 176.0
offset_bottom = 112.0
texture_normal = SubResource("GradientTexture2D_d3352")

[node name="Label" type="Label" parent="LevelSelect/TextureButton2" unique_id=92086256]
layout_mode = 0
offset_left = -16.0
offset_top = 32.0
offset_right = 46.0
offset_bottom = 55.0
text = "World 2"
label_settings = SubResource("LabelSettings_ufv5y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton3" type="TextureButton" parent="LevelSelect" unique_id=457577693]
layout_mode = 0
offset_left = 224.0
offset_top = 80.0
offset_right = 256.0
offset_bottom = 112.0
texture_normal = SubResource("GradientTexture2D_d3352")

[node name="Label" type="Label" parent="LevelSelect/TextureButton3" unique_id=975863987]
layout_mode = 0
offset_left = -16.0
offset_top = 32.0
offset_right = 46.0
offset_bottom = 55.0
text = "World 3"
label_settings = SubResource("LabelSettings_ufv5y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1582856484]
libraries/ = SubResource("AnimationLibrary_3wf2c")

[connection signal="button_down" from="Start/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="LevelSelect/TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_down" from="LevelSelect/TextureButton2" to="." method="_on_texture_button_2_button_down"]
[connection signal="button_down" from="LevelSelect/TextureButton3" to="." method="_on_texture_button_3_button_down"]
